# verdadero-falso-alexa-skill

./: .gitignore  Pipfile  README.md  interaction_model.json  pyproject.toml
assets/: Logo.ai
initial_data/: load_data.py  questions.json
lambda/: lambda_function.py  main.py  utils.py
lambda/connectors/: db_functions.py  db_utils.py
lambda/db/: db_functions.py
lambda/handlers/: CancelOrStopIntentHandler.py  CatchAllExceptionHandler.py  FallbackIntentHandler.py  GetNewQuestionIntentHandler.py  HelpIntentHandler.py  LaunchRequestHandler.py  LoggingRequestInterceptor.py  QuestionAnswerIntentHandler.py  RepeatIntentHandler.py  ResponseIntentHandler.py  SessionEndedRequestHandler.py  StartOverIntentHandler.py
lambda/i18n/: __init__.py  es_ES.py  es_MX.py  es_US.py
lambda/texts/: es_ES.py  es_MX.py
lambda/utils/: STATES.py  locale_functions.py  logger.py  misc_functions.py  question_functions.py
scripts/: build_package.bat  build_package.sh  deploy_code.bat
skill/: lambda_function.py
skill-package/: skill.json
skill-package/interactionModels/custom/: es-ES.json  es-MX.json  es-US.json
skill-package/response/display/short_text/: document.json
skill/connectors/: db_utils.py
skill/handlers/: CancelOrStopIntentHandler.py  GetNewQuestionIntentHandler.py  LaunchRequestHandler.py  LoggingRequestInterceptor.py  QuestionAnswerIntentHandler.py  RepeatIntentHandler.py  ResponseIntentHandler.py
skill/i18n/: es_ES.py  es_MX.py
skill/utils/: STATES.py  misc_functions.py  question_functions.py
