[tool.poetry]
name = "verdadero-falso-alexa-skill"
version = "0.1.0"
description = "Alexa Skill for playing a Question and Answers game"
authors = ["Ale Sanchez <alesanchezmedina@gmail.com>"]
license = "CC-BY-NC-SA-4.0"
readme = "README.md"
repository = "https://github.com/alesanmed/verdadero-falso-alexa-skill"
keywords = ['alexa-skill', 'q&a', 'questions', 'game']

[tool.poetry.dependencies]
python = "^3.6"
ask-sdk = "^1.5"
pymongo = "^3.7"

[tool.poetry.dev-dependencies]
pylint = "^2.2"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
