[tool.poetry]
name = "verdadero-falso-alexa-skill"
version = "0.1.0"
description = "Alexa Skill for playing a Question and Answers game"
authors = ["Ale Sanchez <alesanchezmedina@gmail.com>"]
license = "CC-BY-NC-SA-4.0"
readme = "README.md"
repository = "https://github.com/alesanmed/verdadero-falso-alexa-skill"
keywords = ['alexa-skill', 'q&a', 'questions', 'game']

[tool.poetry.dependencies]
python = "3.9.14"
ask-sdk = "^1.5"
pymongo = {version = "^3.11.0", extras = ["srv","tls"]}

[tool.poetry.group.dev.dependencies]
pylint = "^2.2"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
bandit = "^1.7.4"
ask-sdk-local-debug = "^1.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
